crates/geko_tests/src/snapshots/geko_tests__sema__sema_3.snap
---
source: crates/geko_tests/src/sema.rs
expression: result
---
sema::continue_outside_fn

  x couldn't use `return` statement outside of loop.
   ,-[test.gk:2:9]
 1 | 
 2 |         return;
   :         ^^^|^^
   :            `-- this `return` statement is invalid.
 3 |         
   `----
